--- a/main.css
+++ b/main.css
@@ -1,3 +1,20 @@
 body {
   background-color: antiquewhite;
 }
+
+
+.gryffindor-type {
+
+}
+
+.hufflepuff-type {
+
+}
+
+.ravenclaw-type {
+
+}
+
+.slytherin-type {
+
+}
