--- a/main.css
+++ b/main.css
@@ -2,6 +2,16 @@ body {
   background-color: antiquewhite;
 }
 
+#form-container {
+  display: flex;
+  justify-content: center;
+}
+
+#top {
+width: fit-content;
+height: fit-content;
+}
+
 .card {
   
   height: 250px;
@@ -10,22 +20,66 @@ body {
   align-items: center;
 }
 
-#app {
+#student-container {
   display: flex;
+  justify-content: space-evenly;
 }
 
+#filter-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+#lost {
+
+  display: flex;
+  justify-content: center;
+  width: fit-content;
+  height: fit-content;
+}
+
+#expelled-container {
+display: flex;
+justify-content: center;
+
+}
+
+
+
+
 .gryffindor-type {
-background-color: rgb(229, 186, 76);
+  background-color: rgb(229, 186, 76);
+}
+
+#gryf-btn {
+  background-color: rgb(229, 186, 76);
 }
 
 .hufflepuff-type {
-background-color: rgb(188, 188, 244);
+  background-color: rgb(188, 188, 244);
+}
+
+#huff-btn {
+  background-color: rgb(188, 188, 244);
 }
 
 .ravenclaw-type {
-background-color: rgb(159, 152, 152);
+  background-color: rgb(159, 152, 152);
+}
+
+#rav-btn {
+  background-color: rgb(159, 152, 152);
 }
 
 .slytherin-type {
-background-color: rgb(157, 244, 157);
+  background-color: rgb(157, 244, 157);
+}
+
+#sly-btn {
+  background-color: rgb(157, 244, 157);
+}
+
+#ex-btn {
+  background-color: black;
+  color: antiquewhite;
 }
