--- a/main.css
+++ b/main.css
@@ -2,14 +2,26 @@ body {
   background-color: antiquewhite;
 }
 
+.card-img-top {
+  max-width: max-content;
+  max-height: max-content;
+}
+
 #form-container {
   display: flex;
   justify-content: center;
 }
 
+#head {
+  background-color: rgb(226, 174, 164);
+}
+
 #top {
-width: fit-content;
+width: 500px;
 height: fit-content;
+background-color: rgb(226, 149, 135);
+margin: 5px;
+border: 3px solid brown;
 }
 
 .card {
@@ -18,6 +30,8 @@ height: fit-content;
   width: 150px;
   text-align: center;
   align-items: center;
+  margin: 5px;
+  border: 1px solid brown;
 }
 
 #student-container {
@@ -31,11 +45,13 @@ height: fit-content;
 }
 
 #lost {
-
   display: flex;
   justify-content: center;
   width: fit-content;
   height: fit-content;
+  background-color: lightgray;
+  margin: 5px;
+  border: 3px solid black;
 }
 
 #expelled-container {
@@ -53,6 +69,7 @@ justify-content: center;
 
 #gryf-btn {
   background-color: rgb(229, 186, 76);
+  margin: 5px;
 }
 
 .hufflepuff-type {
@@ -61,6 +78,7 @@ justify-content: center;
 
 #huff-btn {
   background-color: rgb(188, 188, 244);
+  margin: 5px;
 }
 
 .ravenclaw-type {
@@ -69,6 +87,7 @@ justify-content: center;
 
 #rav-btn {
   background-color: rgb(159, 152, 152);
+  margin: 5px;
 }
 
 .slytherin-type {
@@ -77,9 +96,11 @@ justify-content: center;
 
 #sly-btn {
   background-color: rgb(157, 244, 157);
+  margin: 5px;
 }
 
 #ex-btn {
   background-color: black;
   color: antiquewhite;
+  margin: 5px;
 }
